main جديد تماما

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/new-main.css">
     <link rel="stylesheet" href="css/headerCss.css">
     <link rel="stylesheet" href="css/footerCss.css">
     <link rel="stylesheet" href="css/mobile.css">
@@ -114,12 +114,12 @@
         <section id="hero" class="hero">
             <div class="poem">
                 <p class="heroP1">
-                    ناجِ البحيرةَ وحدك الآنا واجلسْ بهذا الصخرِ منفردا!
+                    انا البحيرة والأدب والحب دستوري
                 </p>
                 <p class="heroP2">
-                    قل للبحيرةِ تذكرين وقدْ سكن المساءُ ونحن باللجِّ
+                 فلاحة شاطرة وعارفة في الحياة دوري
                 </p>
-                <span>--إبراهيم ناجي</span>
+                <span>محمد داود--</span>
             </div>
              <div class="imgCont"> 
                  <img src="https://www.svgrepo.com/show/147978/down-black-arrow.svg" alt="دار اوبيرا دمنهور">
