dark mode and about

--- a/specific-tabs/togel.html
+++ b/specific-tabs/togel.html
@@ -13,8 +13,8 @@
                 
                 <h3>الالوان</h3>
                 <div style="display: flex;gap: 17px;justify-content: space-around;">
-                    <button class="light">light</button>
-                    <button class="dark">dark</button>
+                    <button class="light" onclick="addlight()">light</button>
+                    <button class="dark" onclick="adddark()">dark</button>
                 </div>
             </div>
         </div>
