تنظيف الكود , تحسين الدارك ,تصليح بجات, لوكال ستوريج

--- a/specific-tabs/Wadi-El-Natrun.html
+++ b/specific-tabs/Wadi-El-Natrun.html
@@ -49,7 +49,7 @@
             </div>
 
             <h1 class="h11">دير الأنبا بيشوي</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Monastery of Saint Bishoy</h1>
+            <h1 class="smallTitle">Monastery of Saint Bishoy</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -130,7 +130,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3444.121531314282!2d3
             </div>
 
             <h1 class="h11">Monastery of Saint Bishoy (Anba Bishoy)</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">دير الأنبا بيشوي</h1>
+            <h1 class="smallTitle">دير الأنبا بيشوي</h1>
             <section class="details">
 
                 <div class="detail-card">
