--- a/specific-tabs/abkain.html
+++ b/specific-tabs/abkain.html
@@ -46,7 +46,7 @@
             </div>
 
             <h1 class="h11">تل الابقعين</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Tel al-Abqa'in</h1>
+            <h1 class="smallTitle">Tel al-Abqa'in</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -104,7 +104,7 @@
             </div>
 
             <h1 class="h11">Tel al-Abqa'in</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">تل الابقعين</h1>
+            <h1 class="smallTitle">تل الابقعين</h1>
             <section class="details">
 
                 <div class="detail-card">
