--- a/specific-tabs/abo-abdellah.html
+++ b/specific-tabs/abo-abdellah.html
@@ -45,7 +45,7 @@
             </div>
 
             <h1 class="h11">Abu Abdullah Al-Maghribi Mosque</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">مسجد ابو عبدالله المغربي</h1>
+            <h1 class="smallTitle">مسجد ابو عبدالله المغربي</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -110,7 +110,7 @@ The artist Mohamed Abu Al-Makarem is visiting this place. </b>
             </div>
 
             <h1 class="h11">مسجد ابو عبدالله المغربي</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu Abdullah Al-Maghribi Mosque</h1>
+            <h1 class="smallTitle">Abu Abdullah Al-Maghribi Mosque</h1>
             <section class="details">
 
 <div class="detail-card">
