--- a/specific-tabs/arab-kaly.html
+++ b/specific-tabs/arab-kaly.html
@@ -46,7 +46,7 @@
         </div>
 
         <h1 class="h11">Arab Kaly House</h1>
-        <h1 class="h11" style="font-size: 18px;color: #494949;">منزل عرب كلى</h1>
+        <h1 class="smallTitle">منزل عرب كلى</h1>
         <section class="details">
 
             <div class="detail-card">
@@ -118,7 +118,7 @@
             </div>
 
             <h1 class="h11">منزل عرب كلى</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Arab Kaly House</h1>
+            <h1 class="smallTitle">Arab Kaly House</h1>
             <section class="details">
 
 <div class="detail-card">
