--- a/specific-tabs/baramos.html
+++ b/specific-tabs/baramos.html
@@ -47,7 +47,7 @@
             </div>
 
             <h1 class="h11">Monastery of Paramos (El Baramous)</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">دير البراموس</h1>
+            <h1 class="smallTitle">دير البراموس</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -126,7 +126,7 @@
             </div>
 
             <h1 class="h11">دير البراموس</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Monastery of Paramos</h1>
+            <h1 class="smallTitle">Monastery of Paramos</h1>
             <section class="details">
                 
                 <div class="detail-card">
