--- a/specific-tabs/canob.html
+++ b/specific-tabs/canob.html
@@ -50,7 +50,7 @@
             </div>
 
             <h1 class="h11">Kom el-Hisn Stele "Decree of Canopus"</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">لوحة كوم الحصن "مرسوم كانوب"</h1>
+            <h1 class="smallTitle">لوحة كوم الحصن "مرسوم كانوب"</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -98,7 +98,7 @@
             </div>
 
             <h1 class="h11">لوحة كوم الحصن "مرسوم كانوب"</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Decree of Canopus</h1>
+            <h1 class="smallTitle">Decree of Canopus</h1>
             <section class="details">
 
 <div class="detail-card">
