--- a/specific-tabs/dareh-ebn-el-nafis.html
+++ b/specific-tabs/dareh-ebn-el-nafis.html
@@ -51,7 +51,7 @@
                 </div>
 
                 <h1 class="h11">Ibn al-Nafis's Mausoleum</h1>
-                <h1 class="h11" style="font-size: 18px;color: #494949;">ضريح ابن النفيس</h1>
+                <h1 class="smallTitle">ضريح ابن النفيس</h1>
                 <section class="details">
 
                     <div class="detail-card">
@@ -129,7 +129,7 @@
                 </div>
 
                 <h1 class="h11">ضريح ابن النفيس</h1>
-                <h1 class="h11" style="font-size: 18px;color: #494949;">Ibn al-Nafis's Mausoleum</h1>
+                <h1 class="smallTitle">Ibn al-Nafis's Mausoleum</h1>
                 <section class="details">
 
                     <div class="detail-card">
