--- a/specific-tabs/defsho.html
+++ b/specific-tabs/defsho.html
@@ -50,7 +50,7 @@
             </div>
 
             <h1 class="h11">Kom Dafsho</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">كوم دفشو</h1>
+            <h1 class="smallTitle">كوم دفشو</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -124,7 +124,7 @@
             </div>
 
             <h1 class="h11">كوم دفشو</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Kom Dafsho</h1>
+            <h1 class="smallTitle">Kom Dafsho</h1>
             <section class="details">
 
 <div class="detail-card">
