--- a/specific-tabs/der-serian.html
+++ b/specific-tabs/der-serian.html
@@ -50,7 +50,7 @@
             </div>
 
             <h1 class="h11">Monastery of the Virgin Mary - The Syriacs (Syrian Monastery)</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">دير العذراء - السريان</h1>
+            <h1 class="smallTitle">دير العذراء - السريان</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -118,7 +118,7 @@
             </div>
 
             <h1 class="h11">دير العذراء - السريان</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Monastery of Syriacs</h1>
+            <h1 class="smallTitle">Monastery of Syriacs</h1>
             <section class="details">
 
                 <div class="detail-card">
