--- a/specific-tabs/edfena.html
+++ b/specific-tabs/edfena.html
@@ -46,7 +46,7 @@
             </div>
 
             <h1 class="h11">كوبري السكة الحديد بادفينا</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Edvina Railway Bridge</h1>
+            <h1 class="smallTitle">Edvina Railway Bridge</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -116,7 +116,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3409.5894566450247!2d
             </div>
 
             <h1 class="h11">Edfina Railway Bridge</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">كوبري السكة الحديد بادفينا</h1>
+            <h1 class="smallTitle">كوبري السكة الحديد بادفينا</h1>
             <section class="details">
 
                 <div class="detail-card">
