--- a/specific-tabs/eyelife.html
+++ b/specific-tabs/eyelife.html
@@ -47,7 +47,7 @@
             </div>
 
             <h1 class="h11">قصر عين الحياة</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Ain El Hayat Palace</h1>
+            <h1 class="smallTitle">Ain El Hayat Palace</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -118,7 +118,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3460.5454567565876!2d
             </div>
 
             <h1 class="h11">Ain El Hayat Palace</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">قصر عين الحياة</h1>
+            <h1 class="smallTitle">قصر عين الحياة</h1>
             <section class="details">
 
                 <div class="detail-card">
