--- a/specific-tabs/khrashi.html
+++ b/specific-tabs/khrashi.html
@@ -49,7 +49,7 @@
             </div>
 
             <h1 class="h11">Al-Kharashi Mosque</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">مسجد الخراشى</h1>
+            <h1 class="smallTitle">مسجد الخراشى</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -125,7 +125,7 @@
             </div>
 
             <h1 class="h11">مسجد الخراشى</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Al-Kharashi Mosque</h1>
+            <h1 class="smallTitle">Al-Kharashi Mosque</h1>
             <section class="details">
 
                 <div class="detail-card">
