--- a/specific-tabs/lion.html
+++ b/specific-tabs/lion.html
@@ -46,7 +46,7 @@
             </div>
 
             <h1 class="h11">تمثال اسد دمنهور</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Damanhur Lion Statue</h1>
+            <h1 class="smallTitle">Damanhur Lion Statue</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -95,7 +95,7 @@
             </div>
 
             <h1 class="h11">Damanhour Lion Statue</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">تمثال اسد دمنهور</h1>
+            <h1 class="smallTitle">تمثال اسد دمنهور</h1>
             <section class="details">
 
                 <div class="detail-card">
