--- a/specific-tabs/mikhaiel.html
+++ b/specific-tabs/mikhaiel.html
@@ -53,7 +53,7 @@
             </div>
 
             <h1 class="h11">كنيسة الملاك ميخائيل</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Church of the Archangel Michael</h1>
+            <h1 class="smallTitle">Church of the Archangel Michael</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -134,7 +134,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d260295.0427422505!2d3
             </div>
 
             <h1 class="h11">Church of the Archangel Michael</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">كنيسة الملاك ميخائيل</h1>
+            <h1 class="smallTitle">كنيسة الملاك ميخائيل</h1>
             <section class="details">
 
                 <div class="detail-card">
