--- a/specific-tabs/opera-damanhur.html
+++ b/specific-tabs/opera-damanhur.html
@@ -54,7 +54,7 @@
             </div>
 
             <h1 class="h11">دار أوبرا دمنهور</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Damanhour Opera House</h1>
+            <h1 class="smallTitle">Damanhour Opera House</h1>
             <section class="details">
                 <div class="detail-card">
                     <h2> معلومات</h2>
@@ -142,7 +142,7 @@
             </div>
 
             <h1 class="h11">Damanhour Opera House</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">دار أوبرا دمنهور</h1>
+            <h1 class="smallTitle">دار أوبرا دمنهور</h1>
             <section class="details">
                 <div class="detail-card">
                     <h2> Information</h2>
