--- a/specific-tabs/qanater.html
+++ b/specific-tabs/qanater.html
@@ -50,7 +50,7 @@
             </div>
 
             <h1 class="h11">قناطر إدفينا</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Edvina Aqueducts</h1>
+            <h1 class="smallTitle">Edvina Aqueducts</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -129,7 +129,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3408.917612280583!2d3
         </div>
 
         <h1 class="h11">Edfina Barrages (Qanater Edfina)</h1>
-        <h1 class="h11" style="font-size: 18px;color: #494949;">قناطر إدفينا</h1>
+        <h1 class="smallTitle">قناطر إدفينا</h1>
         <section class="details">
 
             <div class="detail-card">
