--- a/specific-tabs/rashid-stone.html
+++ b/specific-tabs/rashid-stone.html
@@ -53,7 +53,7 @@
             </div>
 
             <h1 class="h11">حجر رشيد</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Rashid stone</h1>
+            <h1 class="smallTitle">Rashid stone</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -102,7 +102,7 @@
             </div>
 
             <h1 class="h11">Rashid Stone (Rosetta Stone)</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">حجر رشيد</h1>
+            <h1 class="smallTitle">حجر رشيد</h1>
             <section class="details">
 
                 <div class="detail-card">
