--- a/specific-tabs/rooms.html
+++ b/specific-tabs/rooms.html
@@ -49,7 +49,7 @@
             </div>
 
             <h1 class="h11">Kom Al-Ghuraf (The Rooms Mound)</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">كوم الغرف</h1>
+            <h1 class="smallTitle">كوم الغرف</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -124,7 +124,7 @@
             </div>
 
             <h1 class="h11">كوم الغرف</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">The Rooms</h1>
+            <h1 class="smallTitle">The Rooms</h1>
             <section class="details">
 
 <div class="detail-card">
