--- a/specific-tabs/tahona.html
+++ b/specific-tabs/tahona.html
@@ -49,7 +49,7 @@
             </div>
 
             <h1 class="h11">Abu Shahin Mill</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">طاحونة أبو شاهين</h1>
+            <h1 class="smallTitle">طاحونة أبو شاهين</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -120,7 +120,7 @@
             </div>
 
             <h1 class="h11">طاحونة أبو شاهين</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu Shahin Mill</h1>
+            <h1 class="smallTitle">Abu Shahin Mill</h1>
             <section class="details">
 
                 <div class="detail-card">
