--- a/specific-tabs/toba.html
+++ b/specific-tabs/toba.html
@@ -53,7 +53,7 @@
             </div>
 
             <h1 class="h11">مسجد التوبة</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Toba Mosque</h1>
+            <h1 class="smallTitle">Toba Mosque</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -120,7 +120,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3418.6385073623974!2d
         </div>
 
         <h1 class="h11">Toba Mosque</h1>
-        <h1 class="h11" style="font-size: 18px;color: #494949;">مسجد التوبة</h1>
+        <h1 class="smallTitle">مسجد التوبة</h1>
         <section class="details">
 
             <div class="detail-card">
