--- a/specific-tabs/zaglol.html
+++ b/specific-tabs/zaglol.html
@@ -51,7 +51,7 @@
             </div>
 
             <h1 class="h11">مسجد زغلول</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Zaghloul Mosque</h1>
+            <h1 class="smallTitle">Zaghloul Mosque</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -134,7 +134,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.5514443319485!2d
         </div>
 
         <h1 class="h11">Zaghloul Mosque</h1>
-        <h1 class="h11" style="font-size: 18px;color: #494949;">مسجد زغلول</h1>
+        <h1 class="smallTitle">مسجد زغلول</h1>
         <section class="details">
 
             <div class="detail-card">
