--- a/specific-tabs/abo-magd.html
+++ b/specific-tabs/abo-magd.html
@@ -46,7 +46,7 @@
         </div>
 
         <h1 class="h11">Abu al-Majd Mosque and Shrine</h1>
-        <h1 class="h11" style="font-size: 18px;color: #494949;">مسجد وضريح ابو المجد</h1>
+        <h1 class="smallTitle">مسجد وضريح ابو المجد</h1>
         <section class="details">
 
             <div class="detail-card">
@@ -114,7 +114,7 @@
             </div>
 
             <h1 class="h11">مسجد وضريح ابو المجد</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu al-Majd Mosque and Shrine</h1>
+            <h1 class="smallTitle">Abu al-Majd Mosque and Shrine</h1>
             <section class="details">
 
 <div class="detail-card">
