--- a/specific-tabs/bawaba-reesh.html
+++ b/specific-tabs/bawaba-reesh.html
@@ -45,7 +45,7 @@
             </div>
 
             <h1 class="h11">بوابة أبو الريش</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Abu Rish Gate</h1>
+            <h1 class="smallTitle">Abu Rish Gate</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -112,7 +112,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3453.675347426555!2d3
         </div>
 
         <h1 class="h11">Abu Rish Gate</h1>
-        <h1 class="h11" style="font-size: 18px;color: #494949;">بوابة أبو الريش</h1>
+        <h1 class="smallTitle">بوابة أبو الريش</h1>
         <section class="details">
 
             <div class="detail-card">
