--- a/specific-tabs/beshara-church.html
+++ b/specific-tabs/beshara-church.html
@@ -48,7 +48,7 @@
             </div>
 
             <h1 class="h11">كنيسة البشارة</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Beshara's Church</h1>
+            <h1 class="smallTitle">Beshara's Church</h1>
             <section class="details">
 
                 <div class="detail-card">
@@ -127,7 +127,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6837.186781281777!2d3
             </div>
 
             <h1 class="h11">Beshara's Church</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">كنيسة البشارة</h1>
+            <h1 class="smallTitle">كنيسة البشارة</h1>
             <section class="details">
 
                 <div class="detail-card">
