--- a/specific-tabs/malaha.html
+++ b/specific-tabs/malaha.html
@@ -49,7 +49,7 @@
             </div>
 
             <h1 class="h11">ملاحة الرايزونية</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Rhyzoun salt flat</h1>
+            <h1 class="smallTitle">Rhyzoun salt flat</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -105,7 +105,7 @@
         </div>
 
         <h1 class="h11">Rhyzoun Salt Flat</h1>
-        <h1 class="h11" style="font-size: 18px;color: #494949;">ملاحة الرايزونية</h1>
+        <h1 class="smallTitle">ملاحة الرايزونية</h1>
         <section class="details">
 
             <div class="detail-card">
