--- a/specific-tabs/sidi-omar.html
+++ b/specific-tabs/sidi-omar.html
@@ -49,7 +49,7 @@
             </div>
 
             <h1 class="h11">مسجد سيدي عمر</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">Sidi Omar Mosque</h1>
+            <h1 class="smallTitle">Sidi Omar Mosque</h1>
             <section class="details">
 
 <div class="detail-card">
@@ -132,7 +132,7 @@ src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3418.472905648063!2d3
             </div>
 
             <h1 class="h11">Sidi Omar Mosque</h1>
-            <h1 class="h11" style="font-size: 18px;color: #494949;">مسجد سيدي عمر</h1>
+            <h1 class="smallTitle">مسجد سيدي عمر</h1>
             <section class="details">
 
                 <div class="detail-card">
